syntax = "proto2";

//imports
import "../pop/final.proto";
import "../skip/skipblock.proto";

option java_package = "ch.epfl.dedis.proto";
option java_outer_classname = "CiscProto";

message Device {
    required bytes point = 1;
}

message SchnorrSig {
    required bytes challenge = 1;
    required bytes response = 2;
}

message ID {
    required bytes id = 1;
}

message Data {
    required sint32 threshold = 1;
    map<string, Device> device = 2;
    map<string, string> storage = 3;
    map<string, bytes> votes = 4;
}

message StoreKeys {
    required sint32 type = 1;
    optional FinalStatement final = 2;
    repeated bytes publics = 3;
    required bytes sig = 4;
}

message CreateIdentity {
    optional Data data = 1;
    optional Roster roster = 2;
    required sint32 type = 3;
    required bytes public = 4;
    required bytes schnorrSig = 5;
    required bytes sig = 6;
    required bytes nonce = 7;
}

message CreateIdentityReply {
    optional SkipBlock root = 1;
    optional SkipBlock data = 2;
}

message DataUpdate {
    required bytes id = 1;
}

message DataUpdateReply {
    optional Data data = 1;
}

message ProposeSend {
    required bytes id = 1;
    optional Data data = 2;
}

message ProposeUpdate {
    required bytes id = 1;
}

message ProposeUpdateReply {
    optional Data data = 1;
}

message ProposeVote {
    required bytes id = 1;
    required string signer = 2;
    optional bytes signature = 3;
}

message ProposeVoteReply {
    optional SkipBlock data = 1;
}

message PropagateIdentity {
    required string tag = 1;
    required bytes public = 2;
}

message UpdateSkipBlock {
    required ID id = 1;
    optional SkipBlock latest = 2;
}

message Authenticate {
    required bytes nonce = 1;
    required bytes ctx = 2;
}
