syntax = "proto2";

import "final.proto";

option java_package = "ch.epfl.dedis.proto";
option java_outer_classname = "TokenProto";

message PopToken {
    required FinalStatement final = 1;
    required bytes private = 2;
    required bytes public = 3;
}

message PopTokenToml {
    required FinalStatementToml final = 1;
    required string private = 2;
    required string public = 3;
}
