syntax = "proto2";

option java_package = "ch.epfl.dedis.proto";
option java_outer_classname = "CountProto";

message CountRequest {
}

message CountResponse {
    required sint32 count = 1;
}
