syntax = "proto2";

import "../server/roster.proto";

option java_package = "ch.epfl.dedis.proto";
option java_outer_classname = "SkipBlockProto";

message SkipBlock {
    optional int32 index = 1;
    optional int32 height = 2;
    required int32 max_height = 3;
    required int32 base_height = 4;
    optional bytes backlinks = 5;
    optional bytes verifiers = 6;
    optional bytes parent = 7;
    optional bytes genesis = 8;
    required bytes data = 9;
    required Roster roster = 10;
    optional bytes hash = 11;
    optional BlockLink forward = 12;
    optional BlockLink children = 13;
}

message SkipBlockMap {
    map<string, SkipBlock> skipblocks = 1;
}

message SkipBlockDataEntry {
    required string key = 1;
    required bytes data = 2;
}

message SkipBlockData {
    repeated SkipBlockDataEntry entries = 1;
}

message BlockLink {
    required bytes hash = 1;
    required bytes signature = 2;
}

message GetBlock {
    required bytes id = 1;
}

message GetSingleBlock {
    required bytes id = 1;
}

message GetSingleBlockByIndex {
    required bytes genesis = 1;
    required int32 index = 2;
}

message GetBlockReply {
    required SkipBlock skipblock = 1;
}

message LatestBlockRequest {
    required bytes latestId = 1;
}

message LatestBlockResponse {
    repeated SkipBlock update = 1;
}

message StoreSkipBlockRequest {
    required bytes latestId = 1;
    required SkipBlock newBlock = 2;
}

message StoreSkipBlockResponse {
    required SkipBlock previous = 1;
    required SkipBlock latest = 2;
}

message PropagateSkipBlock {
    required SkipBlock skipblock = 1;
}

message PropagateSkipBlocks {
    repeated SkipBlock skipblocks = 1;
}

message ForwardSignature {
    required int32 targetHeight = 1;
    required bytes previous = 2;
    required SkipBlock newest = 3;
    required BlockLink forwardLink = 4;
}
